--- a/Just0ne.RabbitMQ/Just0ne.RabbitMQ.csproj
+++ b/Just0ne.RabbitMQ/Just0ne.RabbitMQ.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+<ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Just0ne.Common\Just0ne.Common.csproj" />
+  </ItemGroup>
 </Project>
