--- a/Just0ne.Common/Just0ne.Common.csproj
+++ b/Just0ne.Common/Just0ne.Common.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Dapper" Version="2.0.30" />
     <PackageReference Include="DapperExtensions.DotnetCore" Version="1.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
   </ItemGroup>
 
 </Project>
